# src/api/router/user.go
@@ -10,5 +10,6 @@ import (
 func User(router *gin.RouterGroup, cfg *config.Config) {
 	h := handler.NewUsersHandler(cfg)
 	router.POST("/register-by-username", h.RegisterByUsername)
+	router.POST("/login-by-username", h.LoginByUsername)
 
 }
